Fixed row gap

--- a/app/assets/stylesheets/components/_grid.scss
+++ b/app/assets/stylesheets/components/_grid.scss
@@ -3,7 +3,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-column-gap: 10px;
-  grid-row-gap: 70px;
+  grid-row-gap: 10px;
   margin-bottom: 100px;
 }
 
